Adds appearance to all input fields in frontend

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
@@ -286,6 +286,23 @@
         font-weight: 500;
         line-height: 1.08;
         letter-spacing: 0.3px;
+
+        input[type=email] {
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          appearance: none;
+        }
+        input[type=password] {
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          appearance: none;
+        }
+        input[type=text] {
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          appearance: none;
+        }
+
         @include media-breakpoint-up(lg) {
           &:last-child {
             font-size: font-px-to-rem(11px);
