--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/quantity_select.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/quantity_select.scss
@@ -50,6 +50,8 @@
       margin: 0;
   }
   input[type=number] {
-      -moz-appearance:textfield;
+    -webkit-appearance: none;
+    -moz-appearance:textfield;
+    appearance: none;
   }
 }
