--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/no_product_available.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/no_product_available.scss
@@ -22,6 +22,10 @@
     top: $spree-header-mobile-height;
     margin: auto;
 
+    @include media-breakpoint-up(sm) {
+      top: $spree-header-tablet-height;
+    }
+
     @include media-breakpoint-up(md) {
       top: 230px;
     }
