--- a/frontend/app/views/spree/shared/_mobile_navigation.html.erb
+++ b/frontend/app/views/spree/shared/_mobile_navigation.html.erb
@@ -39,7 +39,7 @@
         <li class="d-flex justify-content-between align-items-center mobile-navigation-list-item">
           <%= link_to root[:title], root[:url], class: 'w-75' %>
 
-          <a class="w-25 text-right mobile-navigation-category-link" data-category="<%= root[:title].downcase %>" href="#" aria-label="<%= Spree.t('go_to_category')%>">
+          <a class="w-25 text-right mobile-navigation-category-link" data-category="<%= root[:title].parameterize %>" href="#" aria-label="<%= Spree.t('go_to_category')%>">
             <%= icon(name: 'arrow-right',
                     classes: 'd-sm-none spree-icon-arrow spree-icon-arrow-right',
                     width: 16,
@@ -50,14 +50,19 @@
                     height: 27) %>
           </a>
 
-          <ul class="list-unstyled position-absolute mobile-navigation-sublist" data-category="<%= root[:title].downcase %>">
-            <li class="text-center font-weight-bold mobile-navigation-sublist-header">
-              <%= root[:title] %>
-            </li>
-
-            <% root[:items].each do |item| %>
+          <ul class="list-unstyled position-absolute mobile-navigation-sublist" data-category="<%= root[:title].parameterize %>">
+            <% if root[:items].present? %>
+              <li class="text-center font-weight-bold mobile-navigation-sublist-header">
+                <%= root[:title] %>
+              </li>
+              <% root[:items].each do |item| %>
+                <li class="d-flex justify-content-between align-items-center mobile-navigation-list-item">
+                  <%= link_to item[:title], item[:url], class: 'w-75' %>
+                </li>
+              <% end %>
+            <% else %>
               <li class="d-flex justify-content-between align-items-center mobile-navigation-list-item">
-                <%= link_to item[:title], item[:url], class: 'w-75' %>
+                <%= link_to root[:title], root[:url], class: 'w-75' %>
               </li>
             <% end %>
           </ul>
