--- a/frontend/app/views/spree/checkout/_summary.html.erb
+++ b/frontend/app/views/spree/checkout/_summary.html.erb
@@ -13,13 +13,40 @@
 
     <% order.all_adjustments.nonzero.tax.eligible.group_by(&:label).each do |label, adjustments| %>
       <div class="d-table-cell"><%= label %></div>
-      <div class="d-table-cell text-right"><%= Spree::Money.new(adjustments.sum(&:amount), currency: order.currency).to_html %></div>
+      <% tax_total = Spree::Money.new(adjustments.sum(&:amount), currency: order.currency) %>
+      <div class="d-table-cell text-right"
+           data-hook='tax-total'
+           data-currency='<%= Money::Currency.find(order.currency).symbol %>'
+           data-non-shipment-tax='<%= adjustments.reject{ |adj| adj.adjustable_type== 'Spree::Shipment'}.sum(&:amount) %>'
+           thousands-separator='<%= tax_total.thousands_separator %>'
+           decimal-mark='<%= tax_total.decimal_mark %>'
+           precision='<%= Money::Currency.find(order.currency).exponent %>'
+      >
+        <%= tax_total.to_html %>
+      </div>
+    <% end %>
+    <% if order.all_adjustments.nonzero.tax.eligible.empty? %>
+      <div class="d-table-cell"><%= Spree::TaxRate.first&.name || Spree.t(:tax) %></div>
+      <div class="d-table-cell text-right"
+           data-hook='tax-total'
+           data-non-shipment-tax='0'
+      >
+        <%= Spree::Money.new(0, currency: order.currency) %>
+      </div>
     <% end %>
 
     <% if order.passed_checkout_step?("address") && order.shipments.any? %>
       <div class="d-table-cell"><%= Spree.t(:shipping) %>:</div>
       <% shipping_total = Spree::Money.new(order.shipments.to_a.sum(&:cost), currency: order.currency) %>
-      <div class="d-table-cell text-right" data-hook='shipping-total' data-currency='<%= Money::Currency.find(order.currency).symbol %>' thousands-separator='<%= shipping_total.thousands_separator %>' decimal-mark='<%= shipping_total.decimal_mark %>' precision='<%= Money::Currency.find(order.currency).exponent %>'><%= shipping_total.to_html %></div>
+      <div class="d-table-cell text-right"
+           data-hook='shipping-total'
+           data-currency='<%= Money::Currency.find(order.currency).symbol %>'
+           thousands-separator='<%= shipping_total.thousands_separator %>'
+           decimal-mark='<%= shipping_total.decimal_mark %>'
+           precision='<%= Money::Currency.find(order.currency).exponent %>'
+      >
+        <%= shipping_total.to_html %>
+      </div>
 
       <% if order.shipment_adjustments.nonzero.exists? %>
         <% order.shipment_adjustments.nonzero.promotion.eligible.group_by(&:label).each do |label, adjustments| %>
