--- a/frontend/app/views/spree/products/_gallery_modal.html.erb
+++ b/frontend/app/views/spree/products/_gallery_modal.html.erb
@@ -1,13 +1,13 @@
 <div class="modal fade" id="picturesModal" tabindex="-1" role="dialog" >
   <div class="modal-dialog--zoom modal-dialog mw-100 vh-100 mt-0 mb-0" role="document">
     <div class="modal-content h-100">
-      <div class="modal-body">
+      <div class="modal-body h-100">
         <button class="modal-close" type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&#x2715;</span>
         </button>
         <div class="d-flex justify-content-center align-items-center product-details-images h-100">
           <% if @product_images.size > 1 %>
-            <div class="d-none d-sm-block product-details-thumbnails">
+            <div class="h-100 d-none d-sm-block product-details-thumbnails">
               <%= render 'spree/shared/carousel/thumbnails',
                           images: @product_images,
                           group_id: 'main-product-modal-carousel',
