[SD-758] Removes input field shadow for ios (#9860)
* Fixes input field shadow for ios

* Adds appearance to all input fields in frontend

* Corrects input buttons appearance

* Removes unnecessary space in edit.scss

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/edit.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/edit.scss
@@ -215,7 +215,9 @@
         margin: 0;
       }
       input[type="number"] {
+        -webkit-appearance: none;
         -moz-appearance: textfield;
+        appearance: none;
       }
       button {
         font-size: font-px-to-rem(14px);
@@ -353,6 +355,11 @@
           width: 16px;
         }
       }
+    }
+    input[type=text] {
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      appearance: none;
     }
   }
   &-total {
