--- a/frontend/app/views/spree/products/_cart_form.html.erb
+++ b/frontend/app/views/spree/products/_cart_form.html.erb
@@ -14,7 +14,7 @@
   <%= render 'cart_form_availability_templates', type: 'out-of-stock' %>
 </template>
 
-<% is_product_available_in_currency = product_available_in_currency?(@product) %>
+<% is_product_available_in_currency = product_available_in_currency? %>
 <% default_variant = default_variant(@variants) %>
 
 <%= form_for :order, html: {
@@ -27,7 +27,7 @@
   <div id="inside-product-cart-form" data-hook="inside_product_cart_form">
     <% if is_product_available_in_currency %>
       <div id="product-price" class="mb-2 text-center text-md-left add-to-cart-form-price" data-hook="product_price">
-        <span class="price selling" content="<%= @product.price_in(current_currency).amount.to_d %>">
+        <span class="price selling" content="<%= @product_price.to_d %>">
           <%= display_price(default_variant) %>
         </span>
         <span content="<%= current_currency %>"></span>
