Stop catagories menu jumping closed if you're not quick with mouse.

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/main_nav_bar.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/main_nav_bar.scss
@@ -67,6 +67,7 @@
       display: none;
       background: $meganav-background;
       background-clip: padding-box;
+      border-top: 1px solid $global-border-style;
 
       form {
         input#keywords {
@@ -92,7 +93,7 @@
       }
 
       @include media-breakpoint-up(xl) {
-        top: $spree-header-desktop-height;
+        top: $spree-header-desktop-height - 1px;
       }
     }
   }
