--- a/frontend/app/views/spree/shared/_checkout_header.html.erb
+++ b/frontend/app/views/spree/shared/_checkout_header.html.erb
@@ -10,7 +10,7 @@
         <%= link_to Spree.t('back'), spree.cart_path, class: "d-sm-none text-uppercase", method: :get %>
       </div>
       <div class="d-flex flex-nowrap align-items-center justify-content-center">
-        <figure class="logo flex-grow-0 flex-xl-grow-0 order-xl-0 header-spree-fluid-logo">
+        <figure class="logo flex-grow-0 flex-xl-grow-0 order-xl-0 header-spree-fluid-logo m-0">
         <%= logo(Spree::Config[:logo], method: :get) %>
         </figure>
       </div>
