Revert "Fix product thumbnail selected outline."

--- a/frontend/app/views/spree/shared/carousel/_thumbnails.html.erb
+++ b/frontend/app/views/spree/shared/carousel/_thumbnails.html.erb
@@ -13,7 +13,7 @@
       <% if image_index % per_page == 0 %>
         <div class="carousel-item product-thumbnails-carousel-item<%= ' active' if image_index == 0 %>">
         <div class="h-100 d-flex flex-column justify-content-center">
-            <div class="product-thumbnails-carousel-item-content py-4">
+            <div class="product-thumbnails-carousel-item-content">
       <% end %>
               <div
                 class="product-thumbnails-carousel-item-single product-thumbnails-carousel-item-single--visible"
