--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/thumbnails.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/thumbnails.scss
@@ -11,17 +11,21 @@
       display: block;
     }
     &-single {
-      height: auto;
+      height: 0;
+      padding-bottom: $thumbnails-carousel-single-height;
       position: relative;
       display: none;
-      overflow: hidden;
 
       .modal-dialog--zoom & {
         padding-bottom: $thumbnails-carousel-single-height-zoom;
       }
 
       img {
-        border: 2px solid transparent;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        border: 1px solid transparent;
         &.selected {
           border-color: $secondary-color;
         }
@@ -71,7 +75,7 @@
       &-single {
         &--visible {
           & ~ & {
-            margin-top: $single-gap-md * 3;
+            margin-top: $single-gap-md;
           }
 
           .modal-dialog--zoom & ~ & {
