--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/thumbnails.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/thumbnails.scss
@@ -11,21 +11,16 @@
       display: block;
     }
     &-single {
-      height: 0;
-      padding-bottom: $thumbnails-carousel-single-height;
       position: relative;
       display: none;
+      overflow: hidden;
 
       .modal-dialog--zoom & {
         padding-bottom: $thumbnails-carousel-single-height-zoom;
       }
 
       img {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        object-fit: contain;
-        border: 1px solid transparent;
+        border: 2px solid transparent;
         &.selected {
           border-color: $secondary-color;
         }
@@ -75,7 +70,7 @@
       &-single {
         &--visible {
           & ~ & {
-            margin-top: $single-gap-md;
+            margin-top: $single-gap-md / 2;
           }
 
           .modal-dialog--zoom & ~ & {
