--- a/frontend/app/views/spree/taxons/_subcategories.html.erb
+++ b/frontend/app/views/spree/taxons/_subcategories.html.erb
@@ -1,5 +1,5 @@
 <% cache([base_cache_key, taxon, 'subcategories', permitted_product_params]) do %>
-  <% [taxon.parent, taxon].each do |current_taxon| %>
+  <% [taxon.parent, taxon].compact.each do |current_taxon| %>
     <% child_taxons = [current_taxon, *current_taxon.children] %>
 
     <% if current_taxon.level > 0 && child_taxons.size > 1 %>
