Fix unclickable dropdown arrow

--- a/frontend/app/assets/stylesheets/spree/frontend/application.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/application.scss
@@ -51,4 +51,5 @@
 @import "spree/frontend/views/spree/shared/mobile_navigation";
 @import "spree/frontend/views/spree/shared/no_product_available";
 @import "spree/frontend/views/spree/shared/color_select";
+@import "spree/frontend/views/spree/shared/dropdown";
 @import "spree/frontend/views/spree/shared/delete_address_popup";
