Removes border bottom from footer

--- a/frontend/app/views/spree/shared/_copyright.html.erb
+++ b/frontend/app/views/spree/shared/_copyright.html.erb
@@ -1,4 +1,4 @@
-<div class="border-bottom border-top footer-spree-copyright">
+<div class="border-top footer-spree-copyright">
   <div class="container">
     <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center py-3 footer-spree-copyright-content">
       <div>Designed and developed by</div>
