Sticky checkout summary on desktop

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
@@ -485,7 +485,11 @@
         color: $primary-color;
       }
     }
-
+    #checkout-summary-sticky {
+      @include media-breakpoint-up(lg) {
+        top: $spree-header-desktop-height + 15px;
+      }
+    }
     #checkout-summary {
       @include media-breakpoint-up(sm) {
         border: none;
