Corrects spree_breadcrumbs and fixes product breadcrumb display with css

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
@@ -163,3 +163,9 @@
     line-height: font-px-to-rem(26px);
   }
 }
+
+.breadcrumb-item:last-of-type {
+  @include media-breakpoint-down(md) {
+    display: none;
+  }
+}
