--- a/frontend/app/views/spree/products/show.html.erb
+++ b/frontend/app/views/spree/products/show.html.erb
@@ -1,10 +1,6 @@
 <% @body_id = 'product-details' %>
 
-<div class="container d-none d-xl-block">
-  <%= spree_breadcrumbs(@taxon, '', @product, true) %>
-</div>
-
-<div class="container d-xl-none">
+<div class="container">
   <%= spree_breadcrumbs(@taxon, '', @product) %>
 </div>
 
