--- a/frontend/app/views/spree/checkout/_summary.html.erb
+++ b/frontend/app/views/spree/checkout/_summary.html.erb
@@ -1,4 +1,4 @@
-<div class="checkout-content-summary <%= classes %>">
+<div class="checkout-content-summary">
   <h3 class="text-uppercase text-center checkout-content-summary-header"><%= Spree.t(:order_summary) %></h3>
   <div class="w-100 text-uppercase checkout-content-summary-table" data-hook="order_summary">
     <div class="d-table-cell"><%= Spree.t(:item_total) %>:</div>
