--- a/frontend/app/views/spree/orders/show.html.erb
+++ b/frontend/app/views/spree/orders/show.html.erb
@@ -83,6 +83,6 @@
   </div>
   <hr class="w-100 mt-4 mb-0 d-sm-none" />
   <div id="checkout-summary" class="w-100" data-hook="checkout_summary_box">
-    <%= render partial: 'spree/checkout/summary', locals: { order: @order, classes: '' } %>
+    <%= render partial: 'spree/checkout/summary', locals: { order: @order } %>
   </div>
 </div>
