--- a/frontend/app/views/spree/checkout/edit.html.erb
+++ b/frontend/app/views/spree/checkout/edit.html.erb
@@ -20,11 +20,13 @@
       </div>
 
       <% unless @order.confirm? %>
-        <div id="checkout-summary" class="col-md-12 col-lg-auto checkout-summary-container" data-hook="checkout_summary_box">
-          <%= render partial: 'summary', locals: { order: @order, classes: 'checkout-content-summary-position' } %>
-          <div data-hook="buttons" class="checkout-summary-button">
-            <% submit_label_key = @order.confirm? ? :place_order : :save_and_continue %>
-            <%= submit_tag Spree.t(submit_label_key), class: 'btn btn-primary text-uppercase font-weight-bold w-100 checkout-content-save-continue-button' %>
+        <div id="checkout-summary" class="col-md-12 col-lg-auto h-100" data-hook="checkout_summary_box">
+          <div class="checkout-summary-container">
+            <%= render partial: 'summary', locals: { order: @order } %>
+            <div data-hook="buttons">
+              <% submit_label_key = @order.confirm? ? :place_order : :save_and_continue %>
+              <%= submit_tag Spree.t(submit_label_key), class: 'btn btn-primary text-uppercase font-weight-bold w-100 checkout-content-save-continue-button' %>
+            </div>
           </div>
         </div>
       <% end %>
