Adds small fixes to show.scss

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
@@ -165,7 +165,8 @@
 }
 
 .breadcrumb-item:last-of-type {
-  @include media-breakpoint-down(md) {
-    display: none;
+  display: none;
+  @include media-breakpoint-up(md) {
+    display: block;
   }
 }
