[SD-663] [SD-773] Corrects spree_breadcrumbs (#9913)
* Corrects span error in spree_breadcrumbs

* Adds product name to desktop view and additional itemid and position for product

* Changes variable name in spree_breadcrumbs in frontend_helper.rb

* Corrects spree_breadcrumbs and fixes product breadcrumb display with css

* Adds small fixes to show.scss

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
@@ -163,3 +163,10 @@
     line-height: font-px-to-rem(26px);
   }
 }
+
+.breadcrumb-item:last-of-type {
+  display: none;
+  @include media-breakpoint-up(md) {
+    display: block;
+  }
+}
