[SD-775] Corrects order summary in checkout address (#9910)
* Corrects order summary in checkout address

* Changes code to work only on desktop and fixes failing spec

* Corrects summary content margin error in checkout address

* Corrects displayed error in console

* Corrects order summary postion in checkout

* Removes unnecessary code from _summary_spec.rb

* Corrects edit.html.erb and edit.scss

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/edit.scss
@@ -1,4 +1,11 @@
 .checkout {
+  &-summary {
+    &-container {
+      @include media-breakpoint-up(lg) {
+        top: $spree-header-desktop-height + 25px;
+      }
+    }
+  }
   &-header {
     margin: 0;
     &-link {
