[SD-771] Desktop: Improve Checkout registration 2nd column (no account)

--- a/frontend/app/views/spree/checkout/registration.html.erb
+++ b/frontend/app/views/spree/checkout/registration.html.erb
@@ -5,7 +5,7 @@
       <%= render partial: 'spree/shared/login' if defined?(spree_login_path) %>
     </div>
     <div class="col-xs-12 col-lg-6">
-      <div class="col-lg-11 mx-auto pt-lg-2">
+      <div class="col-lg-11 mx-auto">
         <% if defined?(spree_signup_path) %>
           <%= render partial: 'spree/shared/registration', locals: { registration_button: '' } %>
           <div class="checkout-registration-styled-or">
