Fixes breadcrumbs display for mobile

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
@@ -164,7 +164,7 @@
   }
 }
 
-.breadcrumb-item:last-of-type {
+#breadcrumb-item:last-of-type {
   display: none;
   @include media-breakpoint-up(md) {
     display: block;
