--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
@@ -164,9 +164,11 @@
   }
 }
 
-#product-page.breadcrumb-item:last-of-type {
-  display: none;
-  @include media-breakpoint-up(md) {
-    display: block;
+#product-details {
+  .breadcrumb-item:last-of-type {
+    display: none;
+    @include media-breakpoint-up(md) {
+      display: block;
+    }
   }
 }
