Changes mobile price to uppercase in plp filter

--- a/frontend/app/views/spree/products/_filters_mobile.html.erb
+++ b/frontend/app/views/spree/products/_filters_mobile.html.erb
@@ -32,7 +32,7 @@
 
         <div class="card plp-overlay-card">
           <div class="card-header <%= 'collapsed' if params[:price].blank? %> plp-overlay-card-header" id="headingFour" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour" role="heading" aria-level="3">
-            <%= Spree.t('plp.price') %>
+            <%= Spree.t('plp.mobile.price') %>
             <%= icon(name: 'arrow-right',
                     classes: 'spree-icon-arrow spree-icon-arrow-right mt-1 float-right arrow plp-overlay-card-header-arrow',
                     width: 16,
