[SD-788] Fixes breadcrumbs display for mobile (#9930)
* Fixes breadcrumbs display for mobile

* Adds missing space in frontend_helper.rb

* Changes breadcrumb product id

* Corrects frontend_helper.rb and show.scss

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
@@ -164,9 +164,11 @@
   }
 }
 
-.breadcrumb-item:last-of-type {
-  display: none;
-  @include media-breakpoint-up(md) {
-    display: block;
+#product-details {
+  .breadcrumb-item:last-of-type {
+    display: none;
+    @include media-breakpoint-up(md) {
+      display: block;
+    }
   }
 }
