--- a/frontend/app/views/spree/products/_filters_desktop.html.erb
+++ b/frontend/app/views/spree/products/_filters_desktop.html.erb
@@ -31,7 +31,7 @@
 
     <div class="w-100 card plp-filters-card">
       <div class="card-header <%= 'collapsed' if params[:price].blank? %> px-1 plp-filters-card-header" id="filtersPrice" data-toggle="collapse" data-target="#collapseFilterPrice" aria-expanded="false" aria-controls="collapseFilterPrice" role="heading" aria-level="2">
-        <%= Spree.t('plp.price') %>
+        <%= Spree.t('plp.price').capitalize %>
         <%= icon(name: 'plus',
                 classes: 'mt-1 float-right arrow plp-filters-card-header-arrow--plus',
                 width: 16,
@@ -47,7 +47,7 @@
             <% price_param = params[:price] == name ? '' : name %>
             <%= link_to permitted_params.merge({ price: price_param }), class: "d-block" do %>
               <div class="d-inline-block py-1 px-2 m-1 text-uppercase plp-filters-card-item <%= 'plp-filters-card-item--selected' if params[:price] == name %>">
-                <%= name %>
+                <%= name.upcase %>
               </div>
             <% end %>
           <% end %>
