--- a/frontend/app/views/spree/shared/_option_values.html.erb
+++ b/frontend/app/views/spree/shared/_option_values.html.erb
@@ -15,8 +15,8 @@
                         } %>
                       </span>
       <% else %>
-        <div class="d-inline-block py-1 px-2 m-1 plp-overlay-card-item <%= 'plp-overlay-card-item--selected' if selected_option_values.include?(id) %>">
-          <%= name.upcase %>
+        <div class="d-inline-block text-uppercase py-1 px-2 m-1 plp-overlay-card-item <%= 'plp-overlay-card-item--selected' if selected_option_values.include?(id) %>">
+          <%= name %>
         </div>
       <% end %>
     <% end %>
