use only css to change clor border on radio inputs

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/_color_select.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/_color_select.scss
@@ -21,3 +21,12 @@
     }
   }
 }
+
+input:checked,
+input:focus,
+input:active,
+input:focus-within {
+  & + .color-select-label .color-select-border {
+    stroke: $secondary-color;
+  }
+}
