[SD-633] Fixed zoom for PDP with single image

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/single.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/shared/carousel/single.scss
@@ -62,6 +62,10 @@
         img {
           position: static;
         }
+
+        .modal-dialog--zoom & {
+          padding-bottom: 0;
+        }
       }
     }
     &:not(.carousel-item) {
