[SD-807] Desktop: Remove additional border on PDP image Zoom

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/show.scss
@@ -76,6 +76,7 @@
   .modal-dialog {
     &--zoom {
       &.modal-dialog .modal-content {
+        border: 0;
         padding: 0;
         .modal-close {
           top: 5px;
