--- a/backend/app/views/spree/admin/images/index.html.erb
+++ b/backend/app/views/spree/admin/images/index.html.erb
@@ -38,7 +38,7 @@
             <% end %>
           </td>
           <td class="image">
-            <%= link_to image_tag(main_app.url_for(image.url(:mini))), main_app.url_for(image.url(:product)) %>
+            <%= link_to image_tag(main_app.url_for(image.url(:mini))), main_app.rails_blob_url(image.attachment) %>
           </td>
           <% if has_variants %>
             <td><%= options_text_for(image) %></td>
