Change bag icon for cart icon

--- a/frontend/app/views/spree/shared/_nav_bar.html.erb
+++ b/frontend/app/views/spree/shared/_nav_bar.html.erb
@@ -40,12 +40,12 @@
   <% end %>
   <li id="link-to-cart">
     <span class="d-none d-xl-inline-block cart-icon--xl">
-      <%= icon(name: 'bag',
+      <%= icon(name: 'cart',
                width: 41.8,
                height: 36)  %>
     </span>
     <span class="d-xl-none">
-      <%= icon(name: 'bag',
+      <%= icon(name: 'cart',
                width: 27.8,
                height: 24)  %>
     </span>
